@@ -310,6 +310,7 @@ TESTS_twa = \
   core/ltlcross.test \
   core/spotlbtt2.test \
   core/ltlcross2.test \
+  core/ltlcross6.test \
   core/autcross.test \
   core/autcross2.test \
   core/autcross3.test \
